--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -665,7 +665,8 @@
          "quests":[
             "A Soul's Bane",
             "Rag and Bone Man",
-            "Devious Minds"
+            "Devious Minds",
+            "Nature's Spirit"
          ],
          "shops":[
 
