--- a/_data/tasks.json
+++ b/_data/tasks.json
@@ -2,7 +2,7 @@
    "61":{
       "task":"Bears",
       "master":"Turael",
-      "monster":"Bear (lvl 19)",
+      "monster":"Black Bear (lvl 19)",
       "amount":"41",
       "area":"Tree Gnome Village",
       "coords":[
